specs/grammar-tests/negative/options-chain.lace
get("$BASE_URL/x").expect(status: 200).options(timeoutMs: 1000)
